# ncrypto

./: BUILD.bazel  CHANGELOG.md  CMakeLists.txt  WORKSPACE  release-please-config.json
.github/workflows/: bazel.yml
include/: ncrypto.h  version.h
include/ncrypto/: aead.h  version.h
src/: CMakeLists.txt  aead.cpp  ncrypto.cpp
tests/: basic.cpp
